--- a/JustNote/Controllers/Notes/SampleNotes.plist
+++ b/JustNote/Controllers/Notes/SampleNotes.plist
@@ -3,6 +3,12 @@
 <plist version="1.0">
 <array>
 	<dict>
+		<key>isPinned</key>
+		<true/>
+		<key>isFavorite</key>
+		<true/>
+		<key>isLocked</key>
+		<false/>
 		<key>date</key>
 		<date>2020-07-19T16:24:26Z</date>
 		<key>body</key>
@@ -11,20 +17,18 @@
 		<string>Welcome to Application!</string>
 	</dict>
 	<dict>
+		<key>isPinned</key>
+		<true/>
+		<key>isFavorite</key>
+		<true/>
+		<key>isLocked</key>
+		<true/>
 		<key>date</key>
-		<date>2020-07-19T16:24:26Z</date>
+		<date>2020-07-20T14:14:46Z</date>
 		<key>body</key>
 		<string>This is a demo note. Change the default text for this note and save your changes. Just try it, it&apos;s very easy!</string>
 		<key>title</key>
-		<string>Welcome to Application!</string>
-	</dict>
-	<dict>
-		<key>date</key>
-		<date>2020-07-19T16:24:26Z</date>
-		<key>body</key>
-		<string>This is a demo note. Change the default text for this note and save your changes. Just try it, it&apos;s very easy!</string>
-		<key>title</key>
-		<string>Welcome to Application!</string>
+		<string>Add images to your notes</string>
 	</dict>
 </array>
 </plist>
